src/coolcmp/unit_tests/Semantics/success/associativity.cl
class Hello {
   foo: Int;
   
   moo2(a:Int, b:Int, c:Int, d:Int) : Int {
      a - b - c - d
   };

};

class Main {
	main() : Int {
		1
	};
};