src/coolcmp/unit_tests/Semantics/fail/arithprecedence.cl
class A {
	f() : Int {
		{
			a+b-c;
			a-b+c;

			a+b*c;
			a*b+c;

			a+b/c;
			a/b+c;

			a-b*c;
			a*b-c;

			a-b/c;
			a/b-c;

			a*b/c;
			a/b*c;
		}
	};
};

class Main {
	main() : Int {
		1
	};
};